add github actions

--- a/.github/workflows/test_b.yml
+++ b/.github/workflows/test_b.yml
@@ -10,3 +10,21 @@ jobs:
         if: github.event.action == 'send_message'
         run: |
           echo "hello world"
+name: Remote Dispatch Action Responder
+
+on: [repository_dispatch]
+
+jobs:
+  ping-pong:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Event Information
+        run: |
+          echo "Event '${{ github.event.action }}' received from '${{ github.event.client_payload.repository }}'"
+      - name: PONG - Dispatch response to received PING
+        if: github.event.action == 'ping'
+        run: |
+          curl -X POST https://api.github.com/repos/kow21/repository_dispatch_test_b /dispatches \
+          -H 'Accept: application/vnd.github.everest-preview+json' \
+          -u ${{ secrets.ACCESS_TOKEN }} \
+          --data '{"event_type": "pong", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
