--- a/.github/workflows/test_b.yml
+++ b/.github/workflows/test_b.yml
@@ -8,7 +8,11 @@ jobs:
   signals2:
     runs-on:  ubuntu-latest
     steps:
-      - name: receive
+      - name: receive repository_dispatch
         if: github.event.action == 'send_message'
         run: |
-          echo "hello world"
+          echo "repository_dispatch"
+      - name: push
+        if: github.event.action != 'send_message'
+        run: |
+          echo "push"
