--- a/.github/workflows/test_b.yml
+++ b/.github/workflows/test_b.yml
@@ -9,6 +9,9 @@ jobs:
       - name: Event Information
         run: |
           echo "Event '${{ github.event.action }}' received from '${{ github.event.client_payload.repository }}'"
+      - name: test
+        run: |
+          echo "helloworld"
       - name: PONG - Dispatch response to received PING
         if: github.event.action == 'ping'
         run: |
